--- a/www-root/includes/possible/introduction.html
+++ b/www-root/includes/possible/introduction.html
@@ -6,11 +6,11 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
-        <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+        <img class="img-responsive university-logo fade-in-logo" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
       </div>
 
       <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-        <a href="#possible-movie"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
+        <a href="#possible-movie"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in-caret"></span></a>
       </div>
     </div>
   </div>
