made items fade one at a time on possible intro

--- a/development/terminalfour/src/sass/possible-partials/possible-animations.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-animations.scss
@@ -6,6 +6,9 @@
   20% {
     opacity: 0;
   }
+  70% {
+    opacity: 100;
+  }
   100% {
     opacity: 100;
   }
@@ -15,10 +18,10 @@
   0% {
     opacity: 0;
   }
-  40% {
+  30% {
     opacity: 0;
   }
-  80% {
+  70% {
     opacity: 100;
   }
   100% {
