added dotted left border on the dropdown possible menu to make it look nicer on mobile than plain text

--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -661,8 +661,7 @@ button, [type="button"],
 }
 
 #nav-showing {
-  border-style: solid;
-  border-width: 3px;
+  border-left: 3px dotted #fff;
 }
 
 /*# sourceMappingURL=possible.css.map */
