--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -373,14 +373,14 @@ button, [type="button"],// 1
   // background-color: $MSUDenver-Red;
 
   .movie-section {
-    overflow: hidden;
-    padding-top: 56.25%;
-    position: relative;
+    // overflow: hidden;
+    // padding-top: 56.25%;
+    // position: relative;
 
     iframe {
-      height: 100%;
+      height: 80vh;
       left: 0;
-      position: absolute;
+      // position: absolute;
       top: 0;
       width: 100%;
     }
