--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -316,15 +316,9 @@ button, [type="button"],
   padding-top: 0;
   padding-bottom: 0;
 }
-#possible-movie .movie-section {
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
-}
 #possible-movie .movie-section iframe {
-  height: 100%;
+  height: 80vh;
   left: 0;
-  position: absolute;
   top: 0;
   width: 100%;
 }
