changed border stye on navbar, made it not rounded

--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -524,7 +524,8 @@ button, [type="button"],
 }
 
 #nav-showing {
-  border-left: 3px dotted #fff;
+  border-left: 4px double #fff;
+  border-radius: 0;
 }
 
 @media only screen and (min-width: 544px) {
