--- a/development/terminalfour/src/sass/msu-partials/_footer.scss
+++ b/development/terminalfour/src/sass/msu-partials/_footer.scss
@@ -58,6 +58,7 @@ footer {
 .footer-promos-row {
     padding-bottom: 14px;
     padding-bottom: torem(14);
+    border-top: 5px #002855 solid;
 }
 .footer-promo {
     display: block;
