adds 15px margin top on footer

--- a/development/terminalfour/src/sass/msu-partials/_footer.scss
+++ b/development/terminalfour/src/sass/msu-partials/_footer.scss
@@ -59,6 +59,7 @@ footer {
     padding-bottom: 14px;
     padding-bottom: torem(14);
     border-top: 5px #002855 solid;
+    margin-top: 15px;
 }
 .footer-promo {
     display: block;
