--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -9432,6 +9432,7 @@ footer {
   padding-bottom: 14px;
   padding-bottom: 0.875rem;
   border-top: 5px #002855 solid;
+  margin-top: 15px;
 }
 
 .footer-promo {
