got the content-type names and ids from t4

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -60,7 +60,7 @@
 @import "ContentTypes/card";
 @import "ContentTypes/user-profile";
 @import "ContentTypes/user-profile";
-@import "ContentTypes/content-page"
+@import "ContentTypes/content-page";
 
 /** Admissions Homepage Styles **/
 /** Objects **/
