--- a/development/terminalfour/src/html/includes/content-types-main/content/modal-content.html
+++ b/development/terminalfour/src/html/includes/content-types-main/content/modal-content.html
@@ -1,15 +1,4 @@
-<!--SM Modal Button-->
-
-<div class="col-xs-12 col-lg-12">
-  <div class="ThreeCornerBox">
-    <a class="rowdyblue clickable" data-toggle="modal" href="#109876">
-      Modal Button [test] Content Type
-    </a>
-  </div>
-</div>
-
-<!--SM Modal Content-->
-
+<!-- Program Description Short MODAL #131966 -->
 <div id="109876" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -38,3 +27,40 @@
     </div>
   </div>
 </div>
+
+<!-- <div class="col-xs-12 col-md-6 picture-item"
+  data-groups='["<t4 type="content" name="Program Type" output="normal" modifiers=""  />","all"]'>
+  <a href="#<t4 type='meta' meta='content_id' />">
+    <div class="card-program  <t4 type=" content" name="Program Type" output="normal" modifiers="" />">
+    <h3 class="degreeTitle">
+      <t4 type="content" name="Display Name" output="normal" modifiers="" />
+    </h3>
+    <span class="degreeType">
+      <t4 type="content" name="Program Type" output="normal" modifiers="" />
+      <t4 type="content" output="selective-output" modifiers="" name="Program Subtype" format=" $value" /></span>
+</div>
+</a>
+</div>
+
+<div class="modal fade" id="<t4 type='meta' meta='content_id' />" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">
+          <t4 type="content" output="normal" modifiers="htmlentities" name="Name" />
+        </h4>
+      </div>
+      <div class="modal-body">
+        <t4 type="content" name="Modal Content" output="normal" modifiers="medialibrary, nav_sections" />
+      </div>
+      <div class="modal-footer">
+        <a type="button" role="button" class="btn btn-success"
+          href="<t4 type='content' name='Link' output='linkurl' modifiers=''/> ">
+          Read more about the program
+        </a>
+      </div>
+    </div>
+  </div>
+</div> -->
