--- a/www-root/includes/content-types-main/content.html
+++ b/www-root/includes/content-types-main/content.html
@@ -385,18 +385,7 @@
 
 <li><a href="http://www.externalurlforMenuLinkItemContentType.com">External Text of Menu Link Item Content Type</a></li>
 
-<!--SM Modal Button-->
-
-<div class="col-xs-12 col-lg-12">
-  <div class="ThreeCornerBox">
-    <a class="rowdyblue clickable" data-toggle="modal" href="#109876">
-      Modal Button [test] Content Type
-    </a>
-  </div>
-</div>
-
-<!--SM Modal Content-->
-
+<!-- Program Description Short MODAL #131966 -->
 <div id="109876" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -425,6 +414,93 @@
     </div>
   </div>
 </div>
+
+<!-- <div class="col-xs-12 col-md-6 picture-item"
+  data-groups='["<t4 type="content" name="Program Type" output="normal" modifiers=""  />","all"]'>
+  <a href="#<t4 type='meta' meta='content_id' />">
+    <div class="card-program  <t4 type=" content" name="Program Type" output="normal" modifiers="" />">
+    <h3 class="degreeTitle">
+      <t4 type="content" name="Display Name" output="normal" modifiers="" />
+    </h3>
+    <span class="degreeType">
+      <t4 type="content" name="Program Type" output="normal" modifiers="" />
+      <t4 type="content" output="selective-output" modifiers="" name="Program Subtype" format=" $value" /></span>
+</div>
+</a>
+</div>
+
+<div class="modal fade" id="<t4 type='meta' meta='content_id' />" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">
+          <t4 type="content" output="normal" modifiers="htmlentities" name="Name" />
+        </h4>
+      </div>
+      <div class="modal-body">
+        <t4 type="content" name="Modal Content" output="normal" modifiers="medialibrary, nav_sections" />
+      </div>
+      <div class="modal-footer">
+        <a type="button" role="button" class="btn btn-success"
+          href="<t4 type='content' name='Link' output='linkurl' modifiers=''/> ">
+          Read more about the program
+        </a>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<!-- Modal Button #62855 -->
+
+<div class="col-xs-12 col-lg-12">
+  <div class="ThreeCornerBox">
+    <a class="rowdyblue clickable" data-toggle="modal" href="#109876">
+      Modal Button [test] Content Type
+    </a>
+  </div>
+</div>
+
+
+<!-- 
+<style>
+  .btn {
+    text-align: center;
+  }
+
+</style>
+<div class="col-xs-12 col-md-6">
+  <a class="btn btn-lg custombtn <t4 type='content' name='Color' output='normal' modifiers=''/>" data-toggle="modal"
+    href="#<t4 type='meta' meta='content_id' />">
+    <span>
+      <t4 type="content" output="normal" modifiers="htmlentities" name="Name" /></span>
+  </a>
+</div>
+
+
+<div class="modal fade" id="<t4 type='meta' meta='content_id' />" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">
+          <t4 type="content" output="normal" modifiers="htmlentities" name="Name" />
+        </h4>
+      </div>
+      <div class="modal-body">
+        <t4 type="content" name="Modal Content" output="normal" modifiers="medialibrary, nav_sections" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success clickable"
+          data-href="<t4 type='content' name='Link' output='linkurl' modifiers=''/> ">
+          Learn More
+        </button>
+      </div>
+    </div>
+  </div>
+</div> -->
 
 
 
@@ -1150,9 +1226,36 @@ v class="board-profile-picture" style="float:left;">
 
 <!-- Edited by MGW 05-06-14  -->
 
+<!-- Video Embed #148590 -->
 <div class="row">
   <div class="full-video col-xm-12">
     Embed code of YouTube Content Content Type.
   </div>
 </div>
+
+<!-- <style>
+  .full-video iframe {
+    width: 100%;
+    text-align: center;
+    display: block;
+  }
+  .full-video {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+</style>
+
+<div class="full-video col-xs-12 <t4 type=" content" name="Desktop Width" output="normal" display_field="value" /> ">
+
+<t4 type="content" name="Video Title" output="selective-output" modifiers="striptags,htmlentities"
+  format="<h3>$value</h3>" />
+
+<iframe width="560" height="315" src="<t4 type=" content" name="Video URL" output="normal"
+  modifiers="striptags,htmlentities" />" frameborder="0" webkitallowfullscreen mozallowfullscreen
+allowfullscreen></iframe>
+
+<t4 type="content" name="Video Description" output="selective-output" modifiers="striptags,htmlentities"
+  format="<p>$value</p>" />
+
+</div> -->
 
