--- a/www-root/includes/content-types-main/content/video.html
+++ b/www-root/includes/content-types-main/content/video.html
@@ -1,5 +1,32 @@
+<!-- Video Embed #148590 -->
 <div class="row">
   <div class="full-video col-xm-12">
     Embed code of YouTube Content Content Type.
   </div>
 </div>
+
+<!-- <style>
+  .full-video iframe {
+    width: 100%;
+    text-align: center;
+    display: block;
+  }
+  .full-video {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+</style>
+
+<div class="full-video col-xs-12 <t4 type=" content" name="Desktop Width" output="normal" display_field="value" /> ">
+
+<t4 type="content" name="Video Title" output="selective-output" modifiers="striptags,htmlentities"
+  format="<h3>$value</h3>" />
+
+<iframe width="560" height="315" src="<t4 type=" content" name="Video URL" output="normal"
+  modifiers="striptags,htmlentities" />" frameborder="0" webkitallowfullscreen mozallowfullscreen
+allowfullscreen></iframe>
+
+<t4 type="content" name="Video Description" output="selective-output" modifiers="striptags,htmlentities"
+  format="<p>$value</p>" />
+
+</div> -->
